feat: add a home and header component

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="h-full w-full">
+	<div class="w-full h-10 flex items-center justify-center">
+		<p class="font-[dndFont] text-4xl">DnD Dungeon Master Helper</p>
+	</div>
+	<div class="flex justify-center mt-3">
+		<router-outlet />
+	</div>
+</div>
