feat: add a way to return to the hub

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -3,7 +3,7 @@
 		<div class="inline-flex items-center gap-3 rounded-2xl bg-white/5 px-4 py-2">
 			<img src="/svgs/dice.svg" alt="dice" class="w-6 h-6 shrink-0 -translate-y-px" />
 
-			<h1 class="font-[dndFont] text-2xl sm:text-4xl leading-none text-center">
+			<h1 class="font-[dndFont] text-2xl sm:text-4xl leading-none text-center cursor-pointer hover:underline" (click)="onClickTitle()">
 				DnD Dungeon Master Helper
 			</h1>
 
